# src/common/dtos/post/getPosts.dto.ts
@@ -1,0 +1,16 @@
+import { Expose } from 'class-transformer';
+import { IsString } from 'class-validator';
+
+export class GetPostsDTO {
+  @IsString()
+  @Expose()
+  public profession: string;
+
+  @IsString()
+  @Expose()
+  public country: string;
+
+  @IsString()
+  @Expose()
+  public caption: string;
+}
